updating samples. changed constants class to use package constructor